
151117	Tarpit functionality to be used with the DSR mode.

151112	pen.1: removed obsolete -S option, updated defaults for -x and -L.

151105	Released 0.31.1.

151103	In failover_server: sanity checks to failover routine.

151102	In add_client: add the initial server to .client as well as .initial.

151029	In failover_server: changed abuse_server to ABUSE_SERVER and emerg_server
	to EMERG_SERVER, to handle their default NO_SERVER values.
	See issue #19 on Github.

151012	At the suggestion from Marcos Vinicius Rogowski, the hash algorith
	will now include the client port number if the -r (roundrobin)
	option is used. See https://github.com/UlricE/pen/pull/18
	Released 0.31.0.

150915	Officially released 0.30.1.

150909	Fixed IP-based client tracking.

150828	Removed unnecessary #include <pen.h> in dlist.c

150818	Released 0.30.0.

150803	Added UDP mode for Direct Server Return.

150803	Updated configure.ac for compatibility with CentOS 6.

150725	Added #ifdef around SSLv3 initialization code in ssl, as
	suggested by jca@openbsd.org.

150608	Released 0.29.0.

150528	Transparent reverse proxy support for Linux, FreeBSD and OpenBSD.

150527	Allow the client table size to be updated on the fly. Default size still 2048.
	Allow the connection table size to be updated in the fly. Default still 500.
	See penctl.1, options clients_max and conn_max.

150526	Introduced the macro NO_SERVER to be used instead of -1 to signify
	error conditions and such.
	Removed the fixed server table size along with the -S option.

150525	Fixed cosmetic bug in startup code which required port to be specified
	on backend servers even if it was the same as the listening port.

150520	Released 0.28.0.

150513	Numerous updates to support the madness that is Windows.

150501	Fix from Vincent Bernat: segfault when not using SSL.

150427	DSR support using Netmap on FreeBSD.
	Unbroke DSR on Linux.

150424	Replaced all calls to perror with debug(..., strerror(errno);