@@ -1,4 +1,6 @@
 
+151120	Added tarpit test case to testsuite.sh.
+
 151117	Tarpit functionality to be used with the DSR mode.
 
 151112	pen.1: removed obsolete -S option, updated defaults for -x and -L.
